# rust-backend-sample

./: Cargo.toml  README.md  endpoints.md
src/: main.rs
src/handlers/: user_handler.rs
src/models/: user.rs
src/repositories/: user_repository.rs
src/routes/: user_routes.rs
src/services/: user_service.rs
