[package]
name = "rust-crud-sql"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "mysql"] }
dotenv = "0.15"
sqlx-core = "0.8.6"
redis = { version = "1.0.2", features = ["tokio-comp"]}
